자바 버전 변경에 따른 수정