@@ -25,7 +25,7 @@ public class ImagePartGenerator {
 		Integer id = (Integer) idMap.get(object);
 
 		if (id == null) {
-			id = new Integer(idMap.size());
+			id = Integer.valueOf(idMap.size());
 			this.idMap.put(object, id);
 		}
 
